에러 형식화
에러 발생 시 보기 쉽게 명세화
